--- a/src/main/resources/templates/servicePage.html
+++ b/src/main/resources/templates/servicePage.html
@@ -123,7 +123,7 @@
             <!-- 대표 소개-->
             <tr>
                 <td align=center>
-                    <img src="https://i.ibb.co/KGC2Gd4/1.jpg" alt="">
+                    <img src="https://i.ibb.co/zPRtrRq/1.png" alt="">
                 </td>
             </tr>
             <!-- 대표 소개-->
@@ -131,22 +131,22 @@
             <!-- 분석 알고리즘 소개-->
             <tr>
                 <td align=center>
-                    <img src="https://i.ibb.co/QC21mmC/2.jpg" alt="">
+                    <img src="https://i.ibb.co/WcGn9KS/2.png" alt="">
                 </td>
             </tr>
             <tr>
                 <td align=center>
-                    <img src="https://i.ibb.co/1TTnM3b/3.jpg" alt="">
+                    <img src="https://i.ibb.co/mGp7q3x/3.png" alt="">
                 </td>
             </tr>
             <tr>
                 <td align=center>
-                    <img src="https://i.ibb.co/qxB4hch/4.jpg" alt="">
+                    <img src="https://i.ibb.co/wS3GQ1C/4.png" alt="">
                 </td>
             </tr>
             <tr>
                 <td align=center>
-                    <img src="https://i.ibb.co/88tRDPk/5.jpg" alt="">
+                    <img src="https://i.ibb.co/WcCX27J/5.png" alt="">
                 </td>
             </tr>
             <!-- 분석 알고리즘 소개-->
