--- a/src/main/resources/templates/filterPage.html
+++ b/src/main/resources/templates/filterPage.html
@@ -299,13 +299,13 @@ zoom: 1.65;
               <td></td>
               <td align="center">
                 <button type="button" class = "btn" th:id="${i.index}" name = "delete" th:value = "${channel.ch_url}">
-                  <center border="0"><img src="https://i.ibb.co/qjp9cCV/removebg-preview.png" border="0">
+                  <center border="0"><img src="https://i.ibb.co/qjp9cCV/removebg-preview.png" width="90%" height="90%" border="0">
                     <center/>
                 </button>
                 <button type="button" class = "btn" th:id="${i.index}" name = "insert" th:value = "${channel.ch_url}">
                   <center border="0"><img src="https://i.ibb.co/GRkW0dR/removebg-preview.png" 
                     onmouseover="this.src='https://i.ibb.co/qjp9cCV/removebg-preview.png'" 
-                    onmouseout="this.src='https://i.ibb.co/GRkW0dR/removebg-preview.png'" border="0"> 
+                    onmouseout="this.src='https://i.ibb.co/GRkW0dR/removebg-preview.png'" width="90%" height="90%" border="0"> 
                   <center/>
                 </button>
               </td>
