약간의 변경사항?

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -3,7 +3,9 @@
     <table  border = "0" cellpadding="1" cellspacing="1" width = "100%">
         <tr>
         <td align="left">
-            &nbsp;&nbsp;&nbsp;<a href="index.html"><img src="https://i.ibb.co/4tfcjFQ/logo.png"> 
+            &nbsp;&nbsp;&nbsp;
+            <a href="index.html">
+                <img src="https://i.ibb.co/4tfcjFQ/logo.png"> 
             </a>
         </td>
         <td align="right">
